--- a/templates/gromacs/006.generate_tpr_sh.template
+++ b/templates/gromacs/006.generate_tpr_sh.template
@@ -28,7 +28,7 @@ ARGMIN_002=$(awk -f ./find_min_max.awk ../$BASENAME_002/output/$BASENAME_002.out
 ARGMIN_003=$(awk -f ./find_min_max.awk ../$BASENAME_003/output/$BASENAME_003.out.abf1.czar.pmf)
 ARGMIN_004=$(awk -f ./find_min_max.awk ../$BASENAME_004/output/$BASENAME_004.out.abf1.czar.pmf)
 ARGMIN_005=$(awk -f ./find_min_max.awk ../$BASENAME_005/output/$BASENAME_005.out.abf1.czar.pmf)
-sed -i.orig "s/002_pmf_argmin/$ARGMIN_002/g; s/003_pmf_argmin/$ARGMIN_003/g; s/004_pmf_argmin/$ARGMIN_004/g; s/005_pmf_margin/$ARGMIN_005/g" $COLVARS_INPUT_TEMPLATE
+sed -i.orig "s/002_pmf_argmin/$ARGMIN_002/g; s/003_pmf_argmin/$ARGMIN_003/g; s/004_pmf_argmin/$ARGMIN_004/g; s/005_pmf_argmin/$ARGMIN_005/g" $COLVARS_INPUT_TEMPLATE
 rm -f $COLVARS_INPUT_TEMPLATE.orig
 
 # run the PMF calculation
