Fix typos again.
margin -> argmin

--- a/templates/gromacs/007.generate_tpr_sh.template
+++ b/templates/gromacs/007.generate_tpr_sh.template
@@ -52,7 +52,7 @@ ARGMIN_003=$(awk -f ./find_min_max.awk ../$BASENAME_003/output/$BASENAME_003.out
 ARGMIN_004=$(awk -f ./find_min_max.awk ../$BASENAME_004/output/$BASENAME_004.out.abf1.czar.pmf)
 ARGMIN_005=$(awk -f ./find_min_max.awk ../$BASENAME_005/output/$BASENAME_005.out.abf1.czar.pmf)
 ARGMIN_006=$(awk -f ./find_min_max.awk ../$BASENAME_006/output/$BASENAME_006.out.abf1.czar.pmf)
-sed -i.orig "s/002_pmf_argmin/$ARGMIN_002/g; s/003_pmf_argmin/$ARGMIN_003/g; s/004_pmf_argmin/$ARGMIN_004/g; s/005_pmf_margin/$ARGMIN_005/g; s/006_pmf_margin/$ARGMIN_006/g" $COLVARS_INPUT_TEMPLATE
+sed -i.orig "s/002_pmf_argmin/$ARGMIN_002/g; s/003_pmf_argmin/$ARGMIN_003/g; s/004_pmf_argmin/$ARGMIN_004/g; s/005_pmf_argmin/$ARGMIN_005/g; s/006_pmf_argmin/$ARGMIN_006/g" $COLVARS_INPUT_TEMPLATE
 rm -f $COLVARS_INPUT_TEMPLATE.orig
 
 # run the PMF calculation
