--- a/templates/gromacs/007.colvars.template
+++ b/templates/gromacs/007.colvars.template
@@ -102,6 +102,7 @@ colvar {
     extendedLagrangian      on
     extendedFluctuation     $r_width
     distance {
+        forceNoPBC          yes
         group1 { 
             indexGroup      $protein_selection
         }
@@ -166,7 +167,7 @@ harmonic {
 
 harmonic {
     colvars             RMSD
-    forceConstant       41.84
+    forceConstant       4184
     centers             0
 }
 
@@ -185,7 +186,7 @@ colvar {
 harmonic { 
     colvars         translation 
     centers         0.0 
-    forceConstant   41.84 
+    forceConstant   4184 
 }
 
 colvar {
