--- a/templates/gromacs/007_eq.generate_tpr_sh.template
+++ b/templates/gromacs/007_eq.generate_tpr_sh.template
@@ -16,12 +16,36 @@ MDP_FILE=$MDP_FILE_TEMPLATE
 GRO_FILE=$GRO_FILE_TEMPLATE
 TOP_FILE=$TOP_FILE_TEMPLATE
 
+# enlarge the pbc box
+echo "Enlarge the box to $NEW_BOX_X_TEMPLATE $NEW_BOX_Y_TEMPLATE $NEW_BOX_Z_TEMPLATE"
+$GMX_BIN editconf -f $GRO_FILE -box $NEW_BOX_X_TEMPLATE $NEW_BOX_Y_TEMPLATE $NEW_BOX_Z_TEMPLATE -o $BOX_MODIFIED_GRO_TEMPLATE
+# add more solvents to the new box
+NEW_TOP_FILE=$MODIFIED_TOP_TEMPLATE
+NEW_GRO_FILE=$MODIFIED_GRO_TEMPLATE
+cp -f $TOP_FILE $NEW_TOP_FILE
+echo "Add more solvent molecules to fill the box..."
+$GMX_BIN solvate -cp $BOX_MODIFIED_GRO_TEMPLATE -cs solvent.gro -p $NEW_TOP_FILE -box $NEW_BOX_X_TEMPLATE $NEW_BOX_Y_TEMPLATE $NEW_BOX_Z_TEMPLATE -o $NEW_GRO_FILE
+
+# generate the tpr file for minimization
+OUTPUT_BASENAME=$(basename $(pwd))
+MIN_MDP_FILE=$MIN_MDP_FILE_TEMPLATE
+MIN_TPR_FILE="$OUTPUT_BASENAME.min.tpr"
+NEW_MIN_MDP_FILE="$OUTPUT_BASENAME.min.new.mdp"
+echo "Making gromacs tpr file ($MIN_TPR_FILE) for minimization..."
+$GMX_BIN grompp -f $MIN_MDP_FILE -c $NEW_GRO_FILE -p $NEW_TOP_FILE -o $MIN_TPR_FILE -po $NEW_MIN_MDP_FILE
+
+# run minimization
+mkdir -p output_minimization
+DEFAULT_OUTPUT_FILENAME="output_minimization/$OUTPUT_BASENAME.min.out"
+$GMX_BIN mdrun -s $MIN_TPR_FILE -deffnm $DEFAULT_OUTPUT_FILENAME
+
 # generate the tpr file
 OUTPUT_BASENAME=$(basename $(pwd))
 TPR_FILE="$OUTPUT_BASENAME.tpr"
 NEW_MDP_FILE="$OUTPUT_BASENAME.mdp"
+NEW_GRO_FILE="$DEFAULT_OUTPUT_FILENAME.gro"
 echo "Making gromacs tpr file ($TPR_FILE)..."
-$GMX_BIN grompp -f $MDP_FILE -c $GRO_FILE -p $TOP_FILE -o $TPR_FILE -po $NEW_MDP_FILE
+$GMX_BIN grompp -f $MDP_FILE -c $NEW_GRO_FILE -p $NEW_TOP_FILE -o $TPR_FILE -po $NEW_MDP_FILE
 
 # modify the colvars input file using the PMF minima in previous stages
 ARGMIN_002=$(awk -f ./find_min_max.awk ../$BASENAME_002/output/$BASENAME_002.out.abf1.czar.pmf)
@@ -34,7 +58,7 @@ rm -f $COLVARS_INPUT_TEMPLATE.orig
 
 # run the PMF calculation
 mkdir -p output
-DEFAULT_OUTPUT_FILENAME="output/$OUTPUT_BASENAME.out"
+DEFAULT_OUTPUT_FILENAME="output/${OUTPUT_BASENAME}_eq.out"
 # $GMX_BIN mdrun -ntmpi 1 -ntomp 4 -nb gpu -pme gpu -gpu_id 0 -s $TPR_FILE -deffnm $DEFAULT_OUTPUT_FILENAME -colvars colvar.dat
 echo "You can now run gromacs by the following example:"
 echo "$GMX_BIN mdrun -ntmpi 1 -ntomp 4 -nb gpu -pme gpu -gpu_id 0 -s $TPR_FILE -deffnm $DEFAULT_OUTPUT_FILENAME -colvars $COLVARS_INPUT_TEMPLATE"
