WIP: Use importlib.resources to manage data resources.

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,9 @@ packages = find:
 python_requires = >=3.6
 scripts = 
     bin/BFEE2Gui.py
+include_package_data = true
+install_requires =
+    setuptools
+
+[options.package_data]
+* = *.template, *.tcl, *.awk
