--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,14 @@
 [metadata]
 name = BFEE2
-version = 2.1.0
+version = 2.1.1alpha2
 author = Haohao Fu, Haochuan Chen, Wensheng Cai and Chris Chipot
 author_email = wscai@nankai.edu.cn
 maintainer = Haohao Fu
 maintainer_email = fhh2626@mail.nankai.edu.cn
 url = https://github.com/fhh2626/BFEE2
 license = GPLv3
+license_files =
+    LICENSE
 description = Binding Free Energy Estimator 2
 long_description = file: README.md
 long_description_content_type = text/markdown
