pack Readme (txt) files

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BFEE2
-version = 2.1.1alpha2
+version = 2.1.2alpha
 author = Haohao Fu, Haochuan Chen, Wensheng Cai and Chris Chipot
 author_email = wscai@nankai.edu.cn
 maintainer = Haohao Fu
@@ -23,4 +23,4 @@ install_requires =
     setuptools
 
 [options.package_data]
-* = *.template, *.tcl, *.awk, *.pdf
+* = *.template, *.tcl, *.awk, *.pdf, *.txt
