--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BFEE2
-version = 2.1.2alpha
+version = 2.1.2
 author = Haohao Fu, Haochuan Chen, Wensheng Cai and Chris Chipot
 author_email = wscai@nankai.edu.cn
 maintainer = Haohao Fu
@@ -21,6 +21,12 @@ scripts =
 include_package_data = true
 install_requires =
     setuptools
+    pyside2
+    appdirs
+    MDAnalysis
+    matplotlib
+    numpy
+
 
 [options.package_data]
 * = *.template, *.tcl, *.awk, *.pdf, *.txt
