remove the requirement of pyside 2
the pip version of Pyside2 is not stable

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = BFEE2
-version = 2.1.2
+version = 2.1.2-rc.1
 author = Haohao Fu, Haochuan Chen, Wensheng Cai and Chris Chipot
 author_email = wscai@nankai.edu.cn
 maintainer = Haohao Fu
@@ -21,7 +21,6 @@ scripts =
 include_package_data = true
 install_requires =
     setuptools
-    pyside2
     appdirs
     MDAnalysis
     matplotlib
