Use centerToOrigin for euler and polar angles.
Colvars requires to bring the starting point of the vector to the origin
for correctly measuring the polar angles.

--- a/BFEE2/templates_gromacs/003.colvars.template
+++ b/BFEE2/templates_gromacs/003.colvars.template
@@ -17,8 +17,9 @@ colvar {
     eulerTheta {
         atoms {
             indexGroup          $ligand_selection
-            centerReference     on
-            rotateReference     on
+            centerToReference   on
+            rotateToReference   on
+            centerToOrigin      on
             enableFitGradients  on
             fittingGroup {
                 indexGroup $protein_selection
@@ -40,8 +41,9 @@ colvar {
     eulerPhi {
         atoms {
             indexGroup          $ligand_selection
-            centerReference     on
-            rotateReference     on
+            centerToReference   on
+            rotateToReference   on
+            centerToOrigin      on
             enableFitGradients  on
             fittingGroup {
                 indexGroup $protein_selection
