--- a/BFEE2/templates_gromacs/004.colvars.template
+++ b/BFEE2/templates_gromacs/004.colvars.template
@@ -17,8 +17,9 @@ colvar {
     eulerTheta {
         atoms {
             indexGroup          $ligand_selection
-            centerReference     on
-            rotateReference     on
+            centerToReference   on
+            rotateToReference   on
+            centerToOrigin      on
             enableFitGradients  on
             fittingGroup {
                 indexGroup $protein_selection
@@ -34,8 +35,9 @@ colvar {
     eulerPhi {
         atoms {
             indexGroup          $ligand_selection
-            centerReference     on
-            rotateReference     on
+            centerToReference   on
+            rotateToReference   on
+            centerToOrigin      on
             enableFitGradients  on
             fittingGroup {
                 indexGroup $protein_selection
@@ -57,8 +59,9 @@ colvar {
     eulerPsi {
         atoms {
             indexGroup          $ligand_selection
-            centerReference     on
-            rotateReference     on
+            centerToReference   on
+            rotateToReference   on
+            centerToOrigin      on
             enableFitGradients  on
             fittingGroup {
                 indexGroup $protein_selection
