--- a/BFEE2/templates_gromacs/002.colvars.template
+++ b/BFEE2/templates_gromacs/002.colvars.template
@@ -23,8 +23,9 @@ colvar {
     eulerTheta {
         atoms {
             indexGroup          $ligand_selection
-            centerReference     on
-            rotateReference     on
+            centerToReference   on
+            rotateToReference   on
+            centerToOrigin      on
             enableFitGradients  on
             fittingGroup {
                 indexGroup $protein_selection
