adapt PyPI new requirement

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = BFEE2
+name = bfee2
 author = Haohao Fu, Haochuan Chen, Wensheng Cai and Chris Chipot
 author_email = wscai@nankai.edu.cn
 maintainer = Haohao Fu
