--- a/BFEE2/templates_gromacs/007_min.mdp.template
+++ b/BFEE2/templates_gromacs/007_min.mdp.template
@@ -56,3 +56,7 @@ pcoupl              = no
 
 ;Velocity generation
 gen-vel             = yes
+
+;Colvars
+;colvars-active = no
+;colvars-configfile = $colvarsFile
