--- a/BFEE2/templates_gromacs/005.mdp.template
+++ b/BFEE2/templates_gromacs/005.mdp.template
@@ -68,3 +68,7 @@ ref_t               = $temperature
 
 ;Velocity generation
 gen-vel             = no
+
+;Colvars
+colvars-active = yes
+colvars-configfile = $colvarsFile
