Revert "Avoid too many backups"
This reverts commit 0f0139d7b7c741f029277ab75ac8a17c5f4950d0.

The previous commit causes a Colvars error:
colvars:   Error: historyFreq must be a multiple of outputFreq.

--- a/BFEE2/templates_gromacs/000.colvars.template
+++ b/BFEE2/templates_gromacs/000.colvars.template
@@ -1,5 +1,5 @@
 colvarsTrajFrequency    500
-#colvarsRestartFrequency 50000
+colvarsRestartFrequency 50000
 indexFile               colvars.ndx
 
 colvar {
